# rtr24-4seasons

./: .gitmodules  CMakeLists.txt  Readme.md
auto_vk/: CHANGELOG.md
auto_vk/include/avk/: attachment.hpp  avk.hpp  buffer.hpp  commands.hpp  cpp_utils.hpp  graphics_pipeline.hpp  graphics_pipeline_config.hpp
auto_vk/src/: avk.cpp
docs/: Readme.docx
examples/fourSeasons/: CMakeLists.txt
examples/fourSeasons/shaders/: diffuse_shading_fixed_lightsource.frag  dof1.frag  dof2.frag  dof3.frag  dofBleedNearField.frag  dofCenter.frag  illum.frag  raster.frag  raster.vert  screenspace.frag  screenspace.vert  skybox.frag  ssao.frag  ssao_blur.frag  transform_and_pass_pos_nrm_uv.vert
examples/fourSeasons/source/: camera_path.hpp  camera_path_recorder.hpp  draw_a_triangle_app.cpp  main.cpp  model_loader.cpp
examples/hello_world/source/: draw_a_triangle_app.cpp  gltf_loader.cpp  hello_world.cpp
visual_studio/: .gitignore  4_seasons.sln  README.md  vcpkg.json
visual_studio/examples/fourSeasons/: fourSeasons.vcxproj  fourSeasons.vcxproj.filters
visual_studio/examples/hello_world/: hello_world.vcxproj
